# vanilla_wasm_rust

./: .gitignore  Cargo.toml
src/: lib.rs
www/: bootstrap.js  defined-in-js.js  index.html  index.js  package-lock.json  package.json  server.js
