[package]
name = "vanilla_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


# reduce the size of the wasm
[profile.release]
lto = false

[dependencies]
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
